# modern-cmake-stm32

./: .gitignore  CMakeLists.txt  README.md
bsp/: CMakeLists.txt  cubemx_generate.in
bsp/stm32f1_discovery/: CMakeLists.txt  stm32f1_discovery.ioc
bsp/stm32f4_discovery/: CMakeLists.txt  FreeRTOSConfig.h  stm32f4_discovery.ioc
cmake/: gnu-arm-toolchain.cmake
lib/nice-bsp/: CMakeLists.txt  readme.md
lib/nice-bsp/include/nice-bsp/common/: nice_bsp.h
lib/nice-bsp/include/nice-bsp/error/: SystemErrorHandler.h
lib/nice-bsp/include/nice-bsp/gpio/: GPIO.h
lib/nice-bsp/include/nice-bsp/led/: LedManager.h
lib/nice-bsp/src/bsp_extension/: BspExtension.cpp
lib/nice-bsp/src/error/: SystemErrorHandler.cpp
lib/nice-bsp/src/gpio/: GPIO.cpp
linker_scripts/: STM32F205RETx_FLASH.ld
src/: CMakeLists.txt  ClockManager.cpp  ClockManager.h  main.cpp
